# 2023-build-meetup

./: .bazelrc  .buckconfig  .gitignore  BUCK  BUILD.bazel  MODULE.bazel  README.md  lib.cc  main.cc  remote-worker.sh  setup.py  test.sh
coarse/: BUILD.bazel  Hello.hs  Main.hs
fine/: BUILD.bazel  Message.hs
hello/: BUCK  Reykjavik.hs  Say.hs
rules/haskell/: defs.bzl
