module(name = "my-module", version = "0.1")

bazel_dep(name = "rules_haskell")

# rules_haskell is not yet available in the Bazel Central Registry.
# This won't be needed anymore once it is.
RULES_HASKELL_REV = "25831a7a3313fbadb6dbd166fca20ced6c38a1d1"
RULES_HASKELL_INTEGRITY = "sha384-U+jg9U1fF4ibW5TDzj6UruKqD9ELsUA60QEO1MMTxbgG1BJnh0+JbQd3BcTHroSn"
archive_override(
    module_name = "rules_haskell",
    urls = ["https://github.com/tweag/rules_haskell/archive/%s.tar.gz" % RULES_HASKELL_REV],
    strip_prefix = "rules_haskell-%s" % RULES_HASKELL_REV,
    integrity = RULES_HASKELL_INTEGRITY,
)
